--- a/cs260hiked-html/package.json
+++ b/cs260hiked-html/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "cs260hiked-html",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "simon-react",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "vite": "^5.0.9"
+  },
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "mongodb": "^6.3.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "uuid": "^9.0.1",
+    "ws": "^8.15.1"
   }
 }
